--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Genrator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/img/icons8-qr-code-32.png">
 </head>
 
 <body>
