--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code Genrator</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/img/icons8-qr-code-32.png">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      href="https://img.icons8.com/?size=100&id=113575&format=png&color=000000"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <p>Enter Your Text or URL</p>
-        <input type="text" placeholder="Text or URL" id="qrText">
-        <div id="imgBox">
-            <img src="" id="qrImage">
-            
-        </div>
+      <p>Enter Your Text or URL</p>
+      <input type="text" placeholder="Text or URL" id="qrText" />
+      <div id="imgBox">
+        <img src="" id="qrImage" />
+      </div>
 
-        <button onclick="generateQR()">Generate OR Code</button>
-
+      <button onclick="generateQR()">Generate OR Code</button>
     </div>
-    
-</body>
-
+  </body>
 </html>
