--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
 
       <button onclick="generateQR()">Generate OR Code</button>
     </div>
+    <link rel="stylesheet" href="index.js" />
   </body>
+  
 </html>
