--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <button onclick="generateQR()">Generate OR Code</button>
     </div>
-    <link rel="stylesheet" href="index.js" />
+    <script src="index.js"></script>
   </body>
   
 </html>
